# quick-mark

./: .gitignore  LICENSE  README.ja.md  README.md  biome.json  index.html  package.json  renovate.json  test-data.json  vite.config.ts
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
browser-extension/: manifest.json
browser-extension/_locales/en/: messages.json
browser-extension/_locales/ja/: messages.json
browser-extension/background/: service-worker.js
browser-extension/lib/: api.js
browser-extension/options/: options.css  options.html  options.js
browser-extension/popup/: popup.css  popup.html  popup.js
src/: App.tsx  SearchWindow.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  server.rs
src-tauri/src/commands/: browser.rs  categories.rs  credentials.rs  export.rs  import.rs  links.rs  mod.rs  workspaces.rs
src-tauri/src/db/: mod.rs
src/components/: ConfirmDialog.tsx  ImportDialog.tsx  SettingsDialog.tsx  TitleBar.tsx
src/components/main/: AddLinkDialog.tsx  BulkActionBar.tsx  CategoryDialog.tsx  CredentialDialog.tsx  CredentialList.tsx  EditLinkDialog.tsx  LinkDetail.tsx  LinkList.tsx  Sidebar.tsx  Toolbar.tsx
src/components/search/: SearchPalette.tsx
src/hooks/: useUpdater.ts
src/lib/: commands.ts  favicon.ts  types.ts  utils.test.ts  utils.ts
src/stores/: ui.store.test.ts  ui.store.ts
src/styles/: global.css  tokens.css
